# backend

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AUTHORS.md  BRANCHING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  NOTICE  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: BRANCH_PROTECTION.md  ISSUE_FEATURE_KERNEL.md  dependabot.yml  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: promotion.md
.github/workflows/: ci.yml  release.yml
business_intelligence_analytics/: apps.py
field_service/: apps.py
gryro_apps_store/: apps.py
gyro_talk/: apps.py
gyroapi/: apps.py
gyroerp/: __init__.py  asgi.py  urls.py  views.py  wsgi.py
gyroerp/settings/: __init__.py  base.py  development.py  production.py
gyrokernel/: admin.py  apps.py  authentication.py  backends.py  celery.py  domain.py  pagination.py  permissions.py  registry.py  signals.py  tasks.py  throttles.py  urls.py
gyrokernel/middleware/: cors.py  request_id.py  session_timeout.py
gyrokernel/migrations/: 0001_initial.py  0002_country_currency_language_partnertag_sequence_and_more.py  0003_partner_path.py  0004_phase3.py
gyrokernel/models/: audit.py  (+20 more)
scripts/: apply-branch-protection-all.ps1  branch-protection-backend-temp-merge.json  branch-protection-backend.json  branch-protection-base.json  branch-protection-development.json  branch-protection-staging.json  clean-commit.ps1  graphql-project-fields.json  publish-repo-pr.ps1  query-project3.json  setup-release-pipeline.ps1
(+18 files in other folders)
